# src/main/resources/public/openapi.json
@@ -11,72 +11,6 @@
     }
   ],
   "paths": {
-    "/trust": {
-      "post": {
-        "tags": [
-          "trust validator"
-        ],
-        "description": "Simple Kotlin/Spring Boot WebFlux service to check whether an X.509 certificate chain (x5c) is trusted for a given service type.",
-        "operationId": "initializeTrust",
-        "requestBody": {
-          "description": "The request body to check whether a given X.509 certificate chain is trusted for a given service type.",
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/TrustQueryRequest"
-              },
-              "examples": {
-                "TrustX5CForPIDProvider": {
-                  "$ref": "#/components/examples/TrustX5CForPIDProvider"
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Ok",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/TrustQueryResponse"
-                },
-                "examples": {
-                  "IsTrusted": {
-                    "$ref": "#/components/examples/CertIsTrusted"
-                  },
-                  "IsNotTrusted": {
-                    "$ref": "#/components/examples/CertIsNotTrusted"
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/VerifyTrustError"
-                },
-                "examples": {
-                  "InvalidRequestBody": {
-                    "$ref": "#/components/examples/TrustBadRequest"
-                  },
-                  "UnknownServiceType": {
-                    "$ref": "#/components/examples/TrustUnknownService"
-                  }
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Server error"
-          }
-        }
-      }
-    },
     "/v2/trust": {
       "post": {
         "tags": [
@@ -142,103 +76,6 @@
   },
   "components": {
     "schemas": {
-      "description": {
-        "type": "string",
-        "nullable": true
-      },
-      "error": {
-        "type": "string",
-        "nullable": false
-      },
-      "X5C": {
-        "type": "array",
-        "items": {
-          "nullable": false,
-          "type": "string"
-        }
-      },
-      "ServiceType": {
-        "type": "string",
-        "nullable": false,
-        "enum": [
-          "PIDProvider",
-          "QEAAProvider",
-          "PubEAAProvider",
-          "WalletProvider",
-          "EAAProvider"
-        ]
-      },
-      "TrustQueryRequest": {
-        "type": "object",
-        "nullable": false,
-        "properties": {
-          "x5c": {
-            "allOf": [
-              {
-                "description": "An non empty list of X5C DER formatted certificates."
-              },
-              {
-                "$ref": "#/components/schemas/X5C"
-              }
-            ]
-          },
-          "serviceType": {
-            "allOf": [
-              {
-                "description": "Enum representing the service type to check trust for."
-              },
-              {
-                "$ref": "#/components/schemas/ServiceType"
-              }
-            ]
-          }
-        },
-        "required": [
-          "x5c",
-          "serviceType"
-        ],
-        "additionalProperties": false
-      },
-      "TrustQueryResponse": {
-        "type": "object",
-        "nullable": false,
-        "properties": {
-          "trusted": {
-            "type": "boolean",
-            "nullable": false
-          }
-        }
-      },
-      "VerifyTrustError": {
-        "type": "object",
-        "nullable": false,
-        "properties": {
-          "error": {
-            "allOf": [
-              {
-                "description": "Trusted certificate chain verification error."
-              },
-              {
-                "$ref": "#/components/schemas/error"
-              }
-            ]
-          },
-          "description": {
-            "allOf": [
-              {
-                "description": "Trusted certificate chain verification error description."
-              },
-              {
-                "$ref": "#/components/schemas/description"
-              }
-            ]
-          }
-        },
-        "required": [
-          "error",
-          "description"
-        ]
-      },
       "X509Certificate": {
         "type": "string",
         "nullable": false,
@@ -321,41 +158,6 @@
       }
     },
     "examples": {
-      "TrustX5CForPIDProvider": {
-        "description": "Successful trust check for a PID provider certificate chain.",
-        "value": {
-          "x5c": [
-            "MIIC6zCCApGgAwIBAgIUbX8nbYSLRvy10mKN+hfCVr/8cBcwCgYIKoZIzj0EAwIwXDEeMBwGA1UEAwwVUElEIElzc3VlciBDQSAtIFVUIDAyMS0wKwYDVQQKDCRFVURJIFdhbGxldCBSZWZlcmVuY2UgSW1wbGVtZW50YXRpb24xCzAJBgNVBAYTAlVUMB4XDTI1MDQxMDE0MjU0MFoXDTI2MDcwNDE0MjUzOVowUjEUMBIGA1UEAwwLUElEIERTIC0gMDMxLTArBgNVBAoMJEVVREkgV2FsbGV0IFJlZmVyZW5jZSBJbXBsZW1lbnRhdGlvbjELMAkGA1UEBhMCVVQwWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAASrxZ13wLj/nUuGebYRmPO0q7pRk1x1SjrqLTvtQFpQcy9TwFCcgie/BBC2j/KpLcCr+oj4tyZAofmvHdaTExbBo4IBOTCCATUwHwYDVR0jBBgwFoAUYseURyi9D6IWIKeawkmURPEB08cwJwYDVR0RBCAwHoIcZGV2Lmlzc3Vlci1iYWNrZW5kLmV1ZGl3LmRldjAWBgNVHSUBAf8EDDAKBggrgQICAAABAjBDBgNVHR8EPDA6MDigNqA0hjJodHRwczovL3ByZXByb2QucGtpLmV1ZGl3LmRldi9jcmwvcGlkX0NBX1VUXzAyLmNybDAdBgNVHQ4EFgQUcs3KyqizHgtXRe32n6JBJHAfaLYwDgYDVR0PAQH/BAQDAgeAMF0GA1UdEgRWMFSGUmh0dHBzOi8vZ2l0aHViLmNvbS9ldS1kaWdpdGFsLWlkZW50aXR5LXdhbGxldC9hcmNoaXRlY3R1cmUtYW5kLXJlZmVyZW5jZS1mcmFtZXdvcmswCgYIKoZIzj0EAwIDSAAwRQIgTVZnchD+Qjq53Xs0oc07y3zG6kAXFkJ+ZKzlVG22sC8CIQDtDMQq0Qm/fQ5orrjRT4XB+0Jb6xFPxX9QkVRaMy/IiA=="
-          ],
-          "serviceType": "PIDProvider"
-        }
-      },
-      "CertIsTrusted": {
-        "description": "Certificate chain is trusted.",
-        "value": {
-          "trusted": true
-        }
-      },
-      "CertIsNotTrusted": {
-        "description": "Certificate chain is not trusted.",
-        "value": {
-          "trusted": false
-        }
-      },
-      "TrustBadRequest": {
-        "description": "Bad request.",
-        "value": {
-          "error": "Invalid request body",
-          "description": "Unparsable request body"
-        }
-      },
-      "TrustUnknownService": {
-        "description": "Service type is not supported",
-        "value": {
-          "error": "Unknown service type",
-          "description": "Service type provided does not exist"
-        }
-      },
       "TrustQueryEuPid": {
         "description": "Check if the X509 certificate chain belongs to a trusted PID Provider",
         "value": {
